fixed contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ header {
   background-image: url("../images/background.png");
   background-size: cover;
   background-position: center;
-  color: white;
+  color: #4f4f4f;
   text-align: center;
   padding: 100px 20px;
   z-index: 1;
